# ai-work-sample

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: .env.production  .gitignore  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: TextEditor.tsx
