[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.7", features = ["json"] }     # no Extension feature needed
tower-http = { version = "0.5", features = ["cors"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy    = "0.15"
log        = "0.4"
env_logger = "0.10"
isolang    = "2.4"